CORE-31222: Fixed brand logo alignment for PB, PBK and WE when HFD is not enabled.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/header/_header-primary.scss
@@ -118,6 +118,8 @@ header {
 
         @include breakpoint($desktop) {
           max-width: 29rem;
+          margin: 0 auto;
+          text-align: center;
         }
 
         @include breakpoint($only-tablet) {
@@ -185,6 +187,12 @@ header {
             width: 17.5625rem;
           }
         }
+      }
+    }
+
+    .region__header > .block-system-branding-block {
+      @include breakpoint($desktop) {
+        width: 100%;
       }
     }
   }
